--- a/collated/main/A0102778B.md
+++ b/collated/main/A0102778B.md
@@ -1,5 +1,5 @@
 # A0102778B
-###### \src\main\java\org\teamstbf\yats\logic\commands\RedoCommand.java
+###### \java\org\teamstbf\yats\logic\commands\RedoCommand.java
 ``` java
 
 /**
@@ -26,7 +26,7 @@ public class RedoCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ScheduleCommand.java
+###### \java\org\teamstbf\yats\logic\commands\ScheduleCommand.java
 ``` java
 
 /**
@@ -476,7 +476,7 @@ public class ScheduleCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\UndoCommand.java
+###### \java\org\teamstbf\yats\logic\commands\UndoCommand.java
 ``` java
 
 /**
@@ -503,7 +503,7 @@ public class UndoCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\ScheduleCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\ScheduleCommandParser.java
 ``` java
 
 /**
@@ -544,7 +544,7 @@ public class ScheduleCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\ReadOnlyEventComparatorByDeadline.java
+###### \java\org\teamstbf\yats\model\item\ReadOnlyEventComparatorByDeadline.java
 ``` java
 
 public class ReadOnlyEventComparatorByDeadline implements Comparator<ReadOnlyEvent> {
@@ -568,7 +568,7 @@ public class ReadOnlyEventComparatorByDeadline implements Comparator<ReadOnlyEve
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\ReadOnlyEventComparatorIsEvent.java
+###### \java\org\teamstbf\yats\model\item\ReadOnlyEventComparatorIsEvent.java
 ``` java
 
 public class ReadOnlyEventComparatorIsEvent implements Comparator<ReadOnlyEvent> {
@@ -586,7 +586,7 @@ public class ReadOnlyEventComparatorIsEvent implements Comparator<ReadOnlyEvent>
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\Model.java
+###### \java\org\teamstbf\yats\model\Model.java
 ``` java
     /**
      * Method to get the previous state (undo command) of the task manager
@@ -638,14 +638,14 @@ public class ReadOnlyEventComparatorIsEvent implements Comparator<ReadOnlyEvent>
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\ModelManager.java
+###### \java\org\teamstbf\yats\model\ModelManager.java
 ``` java
 
 	private static Stack<TaskManager> undoTaskManager = new Stack<TaskManager>();
 	private static Stack<TaskManager> redoTaskManager = new Stack<TaskManager>();
 
 ```
-###### \src\main\java\org\teamstbf\yats\model\ModelManager.java
+###### \java\org\teamstbf\yats\model\ModelManager.java
 ``` java
 
 	@Override
@@ -725,73 +725,4 @@ public class ReadOnlyEventComparatorIsEvent implements Comparator<ReadOnlyEvent>
 		indicateTaskManagerChanged();
 	}
 
-```
-###### \src\test\java\guitests\ScheduleCommandTest.java
-``` java
-
-public class ScheduleCommandTest extends TaskManagerGuiTest {
-
-    @Test
-    public void schedule() {
-        // schedule an event on the same day and check that scheduler can choose
-        // correct date/time
-        TestEvent[] currentList = td.getTypicalTasks();
-        currentList = td.getTypicalTasks();
-        assertScheduleTimingSuccess(td.sameDayScheduleChecker, currentList);
-        currentList = TestUtil.addEventsToList(currentList, td.sameDayScheduleChecker);
-
-        // schedule an event on a different day and check that scheduler can
-        // choose correct date/time
-        assertScheduleTimingSuccess(td.nextDayScheduleChecker, currentList);
-        currentList = TestUtil.addEventsToList(currentList, td.nextDayScheduleChecker);
-
-        // schedule a floating event
-        TestEvent eventToAdd = td.fish;
-        assertScheduleSuccess(eventToAdd, currentList);
-        currentList = TestUtil.addEventsToList(currentList, eventToAdd);
-
-        // schedule another event
-        eventToAdd = td.goon;
-        assertScheduleSuccess(eventToAdd, currentList);
-        currentList = TestUtil.addEventsToList(currentList, eventToAdd);
-
-        // schedule to empty list
-        commandBox.runCommand("reset");
-        assertScheduleSuccess(td.fish);
-
-        // invalid command
-        commandBox.runCommand("scheduled you");
-        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-    }
-
-    /*
-     * This test checks that schedule is able to add tasls into the list
-     */
-    private void assertScheduleSuccess(TestEvent eventToAdd, TestEvent... currentList) {
-        commandBox.runCommand(eventToAdd.getScheduleCommand());
-
-        // confirm the new card contains the right data
-        EventCardHandle addedCard = taskListPanel.navigateToEvent(eventToAdd.getTitle().fullName);
-        assertMatching(eventToAdd, addedCard);
-        // confirm the list now contains all previous tasks plus the new
-        // task
-        TestEvent[] expectedList = TestUtil.addEventsToList(currentList, eventToAdd);
-        assertTrue(taskListPanel.isListMatchingWithoutOrder(expectedList));
-    }
-
-    /*
-     * This test checks that the timing scheduled by the scheduling command is
-     * correct
-     */
-    private void assertScheduleTimingSuccess(TestEvent eventToAdd, TestEvent... currentList) {
-        commandBox.runCommand(eventToAdd.getScheduleCommand());
-        // confirm the new card contains the right data
-        EventCardHandle addedCard = taskListPanel.navigateToEvent(eventToAdd.getTitle().toString());
-        assertMatching(eventToAdd, addedCard);
-        // confirm the list now contains all previous tasks plus the new
-        // task with the correct timing
-        TestEvent[] expectedList = TestUtil.addEventsToList(currentList, eventToAdd);
-        assertTrue(taskListPanel.isListMatchingWithoutOrder(expectedList));
-    }
-}
 ```
