--- a/collated/main/A0116219L.md
+++ b/collated/main/A0116219L.md
@@ -1,5 +1,5 @@
 # A0116219L
-###### \src\main\java\org\teamstbf\yats\logic\commands\AddCommand.java
+###### \java\org\teamstbf\yats\logic\commands\AddCommand.java
 ``` java
 /**
  * Adds a task to the TaskManager.
@@ -62,7 +62,7 @@ public class AddCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\EditCommand.java
+###### \java\org\teamstbf\yats\logic\commands\EditCommand.java
 ``` java
 /**
  * Edits the details of an existing task in the task scheduler.
@@ -310,7 +310,7 @@ public class EditCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\AddCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\AddCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new AddCommand object
@@ -382,7 +382,7 @@ public class AddCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\Event.java
+###### \java\org\teamstbf\yats\model\item\Event.java
 ``` java
     /**
      * Creates an Event object using map of parameters, only name is compulsory,
@@ -705,7 +705,7 @@ public class AddCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\Recurrence.java
+###### \java\org\teamstbf\yats\model\item\Recurrence.java
 ``` java
 public class Recurrence {
 
@@ -879,7 +879,7 @@ public class Recurrence {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\Schedule.java
+###### \java\org\teamstbf\yats\model\item\Schedule.java
 ``` java
     /*
      * Creates a Schedule object from the Date object given. Date can be null.
