--- a/collated/main/A0138952W.md
+++ b/collated/main/A0138952W.md
@@ -1,82 +1,5 @@
 # A0138952W
-###### \build\resources\main\view\CalendarView.fxml
-``` fxml
-
-<AnchorPane fx:id="calendarPanel" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane fx:id="dWMView" prefHeight="435.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <tabs>
-            <Tab fx:id="doneTask" text="Done Task">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@DarkThemeDone.css">
-                     <children>
-                        <ListView fx:id="taskListView" prefHeight="471.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children></AnchorPane>
-              </content>
-            </Tab>
-          <Tab fx:id="calendarView" text="Calendar">
-               <content>
-                  <AnchorPane prefHeight="300.0" prefWidth="600.0">
-                     <children>
-                        <GridPane prefHeight="406.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <BorderPane fx:id="calendarRoot">
-                                 <bottom>
-                                    <GridPane BorderPane.alignment="CENTER">
-                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                       </columnConstraints>
-                                       <rowConstraints>
-                                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                       </rowConstraints>
-                                       <children>
-                                          <HBox GridPane.columnIndex="1">
-                                             <children>
-                                                <ButtonBar>
-                                                  <buttons>
-                                                    <Button fx:id="prevDate" maxWidth="10.0" mnemonicParsing="false" onMouseClicked="#prevDay" text="&lt;" />
-                                                      <Button fx:id="nextDate" maxWidth="10.0" mnemonicParsing="false" onMouseClicked="#nextDay" text="&gt;" />
-                                                      <Button fx:id="resetDate" mnemonicParsing="false" onMouseClicked="#resetDay" styleClass="cell_small_label" stylesheets="@DarkTheme.css" text="Today">
-                                                         <font>
-                                                            <Font size="10.0" />
-                                                         </font>
-                                                      </Button>
-                                                  </buttons>
-                                                   <HBox.margin>
-                                                      <Insets bottom="5.0" left="100.0" right="5.0" top="5.0" />
-                                                   </HBox.margin>
-                                                </ButtonBar>
-                                             </children>
-                                          </HBox>
-                                          <AnchorPane>
-                                             <children>
-                                                <Label fx:id="date" alignment="CENTER" prefHeight="40.0" prefWidth="200.0" text="\$date" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                             </children>
-                                          </AnchorPane>
-                                       </children>
-                                    </GridPane>
-                                 </bottom></BorderPane>
-                              <ListView fx:id="timeTasks" prefHeight="200.0" prefWidth="200.0" styleClass="list-cell" stylesheets="@DarkTheme.css" GridPane.rowIndex="1" />
-                           </children>
-                        </GridPane>
-                     </children>
-                  </AnchorPane>
-               </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</AnchorPane>
-```
-###### \src\main\java\org\teamstbf\yats\logic\commands\BatchDeleteCommand.java
+###### \java\org\teamstbf\yats\logic\commands\BatchDeleteCommand.java
 ``` java
 public class BatchDeleteCommand extends Command {
 
@@ -118,7 +41,7 @@ public class BatchDeleteCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\BatchMarkDoneCommand.java
+###### \java\org\teamstbf\yats\logic\commands\BatchMarkDoneCommand.java
 ``` java
 public class BatchMarkDoneCommand extends Command {
 
@@ -167,7 +90,7 @@ public class BatchMarkDoneCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\BatchUnmarkDoneCommand.java
+###### \java\org\teamstbf\yats\logic\commands\BatchUnmarkDoneCommand.java
 ``` java
 public class BatchUnmarkDoneCommand extends Command {
 
@@ -227,7 +150,7 @@ public class BatchUnmarkDoneCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommand.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommand.java
 ``` java
 /**
  * Lists all persons in the task manager to the user.
@@ -257,7 +180,7 @@ public class ListCommand extends Command {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandDeadline.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandDeadline.java
 ``` java
 public class ListCommandDeadline extends ListCommand {
 
@@ -278,7 +201,7 @@ public class ListCommandDeadline extends ListCommand {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandDone.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandDone.java
 ``` java
 public class ListCommandDone extends ListCommand {
 
@@ -297,7 +220,7 @@ public class ListCommandDone extends ListCommand {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandEndTime.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandEndTime.java
 ``` java
 public class ListCommandEndTime extends ListCommand {
 
@@ -318,7 +241,7 @@ public class ListCommandEndTime extends ListCommand {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandLocation.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandLocation.java
 ``` java
 public class ListCommandLocation extends ListCommand {
 
@@ -335,7 +258,7 @@ public class ListCommandLocation extends ListCommand {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandStartTime.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandStartTime.java
 ``` java
 public class ListCommandStartTime extends ListCommand {
 
@@ -357,7 +280,7 @@ public class ListCommandStartTime extends ListCommand {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ListCommandTag.java
+###### \java\org\teamstbf\yats\logic\commands\ListCommandTag.java
 ``` java
 public class ListCommandTag extends ListCommand {
 
@@ -375,7 +298,7 @@ public class ListCommandTag extends ListCommand {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\DeleteCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\DeleteCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new DeleteCommand object
@@ -415,7 +338,7 @@ public class DeleteCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\ListCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\ListCommandParser.java
 ``` java
 public class ListCommandParser {
 
@@ -484,7 +407,7 @@ public class ListCommandParser {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\ParserUtil.java
+###### \java\org\teamstbf\yats\logic\parser\ParserUtil.java
 ``` java
     /**
      * Parses a {@code String} and splits it to its tokens
@@ -551,7 +474,7 @@ public class ListCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\Model.java
+###### \java\org\teamstbf\yats\model\Model.java
 ``` java
 
     /**
@@ -603,7 +526,7 @@ public class ListCommandParser {
     void updateFilteredListToFindAll(Set<String> keywords);
 
 ```
-###### \src\main\java\org\teamstbf\yats\model\ModelManager.java
+###### \java\org\teamstbf\yats\model\ModelManager.java
 ``` java
 
 	private void updateCalendarFilteredEventList(Expression expression) {
@@ -681,7 +604,7 @@ public class ListCommandParser {
 	}
 
 ```
-###### \src\main\java\org\teamstbf\yats\model\ModelManager.java
+###### \java\org\teamstbf\yats\model\ModelManager.java
 ``` java
 	private class LocationQualifier implements Qualifier {
 
@@ -849,7 +772,7 @@ public class ListCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\ui\MultiViewPanel.java
+###### \java\org\teamstbf\yats\ui\MultiViewPanel.java
 ``` java
 
 @SuppressWarnings("restriction")
@@ -1036,7 +959,7 @@ public class MultiViewPanel extends UiPart<Region> {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\ui\TimeCard.java
+###### \java\org\teamstbf\yats\ui\TimeCard.java
 ``` java
 
 public class TimeCard extends UiPart<Region> {
@@ -1068,157 +991,7 @@ public class TimeCard extends UiPart<Region> {
     }
 }
 ```
-###### \src\main\resources\view\CalendarView.fxml
-``` fxml
-
-<AnchorPane fx:id="calendarPanel" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane fx:id="dWMView" prefHeight="435.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <tabs>
-            <Tab fx:id="doneTask" text="Done Task">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@DarkThemeDone.css">
-                     <children>
-                        <ListView fx:id="taskListView" prefHeight="471.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children></AnchorPane>
-              </content>
-            </Tab>
-          <Tab fx:id="calendarView" text="Calendar">
-               <content>
-                  <AnchorPane prefHeight="300.0" prefWidth="600.0">
-                     <children>
-                        <GridPane prefHeight="406.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <BorderPane fx:id="calendarRoot">
-                                 <bottom>
-                                    <GridPane BorderPane.alignment="CENTER">
-                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                       </columnConstraints>
-                                       <rowConstraints>
-                                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                       </rowConstraints>
-                                       <children>
-                                          <HBox GridPane.columnIndex="1">
-                                             <children>
-                                                <ButtonBar>
-                                                  <buttons>
-                                                    <Button fx:id="prevDate" maxWidth="10.0" mnemonicParsing="false" onMouseClicked="#prevDay" text="&lt;" />
-                                                      <Button fx:id="nextDate" maxWidth="10.0" mnemonicParsing="false" onMouseClicked="#nextDay" text="&gt;" />
-                                                      <Button fx:id="resetDate" mnemonicParsing="false" onMouseClicked="#resetDay" styleClass="cell_small_label" stylesheets="@DarkTheme.css" text="Today">
-                                                         <font>
-                                                            <Font size="10.0" />
-                                                         </font>
-                                                      </Button>
-                                                  </buttons>
-                                                   <HBox.margin>
-                                                      <Insets bottom="5.0" left="100.0" right="5.0" top="5.0" />
-                                                   </HBox.margin>
-                                                </ButtonBar>
-                                             </children>
-                                          </HBox>
-                                          <AnchorPane>
-                                             <children>
-                                                <Label fx:id="date" alignment="CENTER" prefHeight="40.0" prefWidth="200.0" text="\$date" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                             </children>
-                                          </AnchorPane>
-                                       </children>
-                                    </GridPane>
-                                 </bottom></BorderPane>
-                              <ListView fx:id="timeTasks" prefHeight="200.0" prefWidth="200.0" styleClass="list-cell" stylesheets="@DarkTheme.css" GridPane.rowIndex="1" />
-                           </children>
-                        </GridPane>
-                     </children>
-                  </AnchorPane>
-               </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</AnchorPane>
-```
-###### \src\test\java\guitests\ListCommandTest.java
-``` java
-
-public class ListCommandTest extends TaskManagerGuiTest {
-
-    @Test
-    public void list_nonEmptyList() {
-        /** lists all tasks in the list */
-        assertListAllResult("list", td.abdicate, td.boop, td.oxygen, td.scheduleChecker, td.cower, td.duck);
-        /** lists all done tasks in the list */
-        assertListResult("list done");
-
-        /**
-         * lists all tasks in the primary list that starts on 9th April
-         */
-        commandBox.runCommand("list");
-        assertListResult("list by start 08/04/2017", td.abdicate, td.oxygen, td.cower, td.scheduleChecker);
-
-        /** lists all tasks in the primary list that ends on 8th April */
-        commandBox.runCommand("list");
-        assertListResult("list by end 08/04/2017", td.abdicate, td.oxygen, td.cower);
-
-        /** lists all tasks in the primary list that has deadline 8th April */
-        commandBox.runCommand("list");
-        assertListResult("list by deadline 08/04/2017", td.boop, td.duck);
-
-        /** lists all tasks in the primary list that has the location NUS */
-        commandBox.runCommand("list");
-        assertListResult("list by location The Wall", td.cower);
-
-        /** lists all tasks in the primary list that has the tag Tag */
-        commandBox.runCommand("list");
-        assertListResult("list by tag Tag ONN", td.oxygen);
-
-        /** lists all tasks in the primary list and sorts it by start date */
-        commandBox.runCommand("list");
-        assertListResult("list by start", td.scheduleChecker, td.abdicate, td.oxygen, td.cower, td.boop, td.duck);
-
-        /** lists all tasks in the primary list and sorts it by end date */
-        commandBox.runCommand("list");
-        assertListResult("list by end", td.abdicate, td.oxygen, td.cower, td.scheduleChecker, td.boop, td.duck);
-
-        /** lists all tasks in the primary list and sorts it by deadline */
-        commandBox.runCommand("list");
-        assertListResult("list by deadline", td.boop, td.duck, td.abdicate, td.oxygen, td.cower, td.scheduleChecker);
-    }
-
-    @Test
-    public void list_emptyList() {
-        commandBox.runCommand("reset");
-        assertListAllResult("list"); // no result
-    }
-
-    @Test
-    public void list_invalidCommand_fail() {
-        commandBox.runCommand("listby start");
-        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-    }
-
-    private void assertListResult(String command, TestEvent... expectedHits) {
-        commandBox.runCommand(command);
-        assertListSize(expectedHits.length);
-        assertResultMessage(expectedHits.length + " tasks listed!");
-        assertTrue(taskListPanel.isListMatching(expectedHits));
-    }
-
-    private void assertListAllResult(String command, TestEvent... expectedHits) {
-        commandBox.runCommand(command);
-        assertListSize(expectedHits.length);
-        assertResultMessage(ListCommand.MESSAGE_SUCCESS);
-    }
-}
-```
-###### \target\classes\view\CalendarView.fxml
+###### \resources\view\CalendarView.fxml
 ``` fxml
 
 <AnchorPane fx:id="calendarPanel" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
