--- a/collated/main/A0139448U.md
+++ b/collated/main/A0139448U.md
@@ -1,5 +1,5 @@
 # A0139448U
-###### \src\main\java\org\teamstbf\yats\logic\commands\ChangeSaveLocationCommand.java
+###### \java\org\teamstbf\yats\logic\commands\ChangeSaveLocationCommand.java
 ``` java
 /*
  * Command to change file directory location
@@ -47,7 +47,7 @@ public class ChangeSaveLocationCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\ClearDoneCommand.java
+###### \java\org\teamstbf\yats\logic\commands\ClearDoneCommand.java
 ``` java
 /**
  * Command to Clear the done tasks in the task manager.
@@ -92,7 +92,7 @@ public class ClearDoneCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\MarkDoneCommand.java
+###### \java\org\teamstbf\yats\logic\commands\MarkDoneCommand.java
 ``` java
 /**
  *
@@ -150,7 +150,7 @@ public class MarkDoneCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\commands\MarkUndoneCommand.java
+###### \java\org\teamstbf\yats\logic\commands\MarkUndoneCommand.java
 ``` java
 /**
  *
@@ -224,7 +224,7 @@ public class MarkUndoneCommand extends Command {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\ChangeSaveLocationCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\ChangeSaveLocationCommandParser.java
 ``` java
 public class ChangeSaveLocationCommandParser {
 
@@ -267,7 +267,7 @@ public class ChangeSaveLocationCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\MarkDoneCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\MarkDoneCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new MarkDoneCommand object
@@ -312,7 +312,7 @@ public class MarkDoneCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\logic\parser\MarkUndoneCommandParser.java
+###### \java\org\teamstbf\yats\logic\parser\MarkUndoneCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new MarkUndoneCommand object
@@ -357,7 +357,7 @@ public class MarkUndoneCommandParser {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\IsDone.java
+###### \java\org\teamstbf\yats\model\item\IsDone.java
 ``` java
 /**
  * Represents a Task's completeness in the Task Manager.
@@ -399,7 +399,7 @@ public class IsDone {
 
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\item\Schedule.java
+###### \java\org\teamstbf\yats\model\item\Schedule.java
 ``` java
     /*
      * Checks to make sure time matches 12 hour clock format with capital AM/PM
@@ -460,7 +460,7 @@ public class IsDone {
     }
 }
 ```
-###### \src\main\java\org\teamstbf\yats\model\Model.java
+###### \java\org\teamstbf\yats\model\Model.java
 ``` java
 
     /*
@@ -470,7 +470,7 @@ public class IsDone {
     void saveTaskManager();
 
 ```
-###### \src\main\java\org\teamstbf\yats\model\tag\UniqueTagList.java
+###### \java\org\teamstbf\yats\model\tag\UniqueTagList.java
 ``` java
     public void removeAndMerge(UniqueTagList from) {
         final Set<Tag> alreadyInside = this.toSet();
@@ -548,301 +548,5 @@ public class IsDone {
         }
     }
 
-}
-```
-###### \src\test\java\guitests\BatchMarkDoneCommandTest.java
-``` java
-public class BatchMarkDoneCommandTest extends TaskManagerGuiTest {
-
-    TestEvent[] expectedTaskList = td.getTypicalTasks();
-
-    private void assertMarkDoneSuccess(int[] filteredEventListIndex, TestEvent[] editedTask) {
-        commandBox.runCommand("mark " + filteredEventListIndex[0] + " " + filteredEventListIndex[1] + " "
-                + filteredEventListIndex[2]);
-        assertResultMessage(String.format(BatchMarkDoneCommand.MESSAGE_EDIT_TASK_SUCCESS, 3));
-        commandBox.runCommand("list done");
-        // confirm the new card contains the right data
-        for (int i = 0; i < filteredEventListIndex.length; i++) {
-            EventCardHandle editedCard = taskListPanel.navigateToEvent(editedTask[i].getTitle().fullName);
-            assertMatching(editedTask[i], editedCard);
-        }
-    }
-
-    private void assertMarkUndoneSuccess(int[] filteredTaskListIndex, TestEvent[] editedTask) {
-        commandBox.runCommand(
-                "unmark " + filteredTaskListIndex[0] + " " + filteredTaskListIndex[1] + " " + filteredTaskListIndex[2]);
-
-        // confirm the new card contains the right data
-        for (int i = 0; i < filteredTaskListIndex.length; i++) {
-            EventCardHandle editedCard = taskListPanel.navigateToEvent(editedTask[i].getTitle().fullName);
-            assertMatching(editedTask[i], editedCard);
-        }
-        // confirm the list now contains all previous events plus the event
-        // with updated details
-        assertResultMessage(String.format(BatchUnmarkDoneCommand.MESSAGE_EDIT_TASK_SUCCESS, 3));
-    }
-
-    @Test
-    public void batch_markDone_markUndone_success() throws Exception {
-
-        int[] filteredEventListIndex = { 1, 2, 3 };
-        TestEvent[] eventToEdit = { expectedTaskList[filteredEventListIndex[0] - 1],
-                expectedTaskList[filteredEventListIndex[1] - 1], expectedTaskList[filteredEventListIndex[2] - 1] };
-        TestEvent[] editedEvent = { new EventBuilder(eventToEdit[0]).withIsDone("Yes").build(),
-                new EventBuilder(eventToEdit[1]).withIsDone("Yes").build(),
-                new EventBuilder(eventToEdit[2]).withIsDone("Yes").build() };
-
-        assertMarkDoneSuccess(filteredEventListIndex, editedEvent);
-
-        TestEvent[] unmarkedEvent = { new EventBuilder(eventToEdit[0]).withIsDone("No").build(),
-                new EventBuilder(eventToEdit[1]).withIsDone("No").build(),
-                new EventBuilder(eventToEdit[2]).withIsDone("No").build() };
-
-        assertMarkUndoneSuccess(filteredEventListIndex, unmarkedEvent);
-    }
-
-    @Test
-    public void batchMark_invalidEventIndex_failure() {
-        commandBox.runCommand("mark 1 d 3");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, BatchMarkDoneCommand.MESSAGE_USAGE));
-    }
-
-    @Test
-    public void batchUnmark_invalidEventIndex_failure() {
-        commandBox.runCommand("mark 1 2 3");
-        commandBox.runCommand("unmark 1 d 3");
-        assertResultMessage(
-                String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, BatchUnmarkDoneCommand.MESSAGE_USAGE));
-    }
-
-    @Test
-    public void batchMark_missingEventIndex_failure() {
-        commandBox.runCommand("mark 1 10 3");
-        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-    }
-
-    @Test
-    public void batchUnmark_missingEventIndex_failure() {
-        commandBox.runCommand("mark 1 2 3");
-        commandBox.runCommand("unmark 1 10 3");
-        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-    }
-
-}
-```
-###### \src\test\java\guitests\MarkDoneCommandTest.java
-``` java
-public class MarkDoneCommandTest extends TaskManagerGuiTest {
-
-    TestEvent[] expectedTaskList = td.getTypicalTasks();
-
-    private void assertMarkDoneSuccess(int filteredTaskListIndex, int taskManagerIndex, TestEvent editedTask) {
-        commandBox.runCommand("mark " + filteredTaskListIndex);
-        assertResultMessage(String.format(MarkDoneCommand.MESSAGE_EDIT_TASK_SUCCESS, editedTask));
-        commandBox.runCommand("list done");
-        // confirm the new card contains the right data
-        EventCardHandle editedCard = taskListPanel.navigateToEvent(editedTask.getTitle().fullName);
-        assertMatching(editedTask, editedCard);
-    }
-
-    private void assertMarkUndoneSuccess(int filteredTaskListIndex, int taskManagerIndex, TestEvent editedTask) {
-        commandBox.runCommand("unmark " + filteredTaskListIndex);
-
-        // confirm the new card contains the right data
-        EventCardHandle editedCard = taskListPanel.navigateToEvent(editedTask.getTitle().fullName);
-        assertMatching(editedTask, editedCard);
-
-        // confirm the list now contains all previous events plus the event
-        // with updated details
-        expectedTaskList[taskManagerIndex - 1] = editedTask;
-        assertResultMessage(String.format(MarkUndoneCommand.MESSAGE_EDIT_TASK_SUCCESS, editedTask));
-    }
-
-    @Test
-    public void mark_findThenMarkThenUnmark_success() throws Exception {
-        commandBox.runCommand("find Oxygen");
-
-        int filteredEventListIndex = 1;
-        int taskManagerIndex = 3;
-
-        TestEvent eventToEdit = expectedTaskList[taskManagerIndex - 1];
-        TestEvent editedEvent = new EventBuilder(eventToEdit).withIsDone("Yes").build();
-
-        assertMarkDoneSuccess(filteredEventListIndex, taskManagerIndex, editedEvent);
-
-        editedEvent = new EventBuilder(eventToEdit).withIsDone("No").build();
-
-        assertMarkUndoneSuccess(filteredEventListIndex, taskManagerIndex, editedEvent);
-    }
-
-    @Test
-    public void mark_invalidEventIndex_failure() {
-        commandBox.runCommand("mark 10");
-        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-    }
-
-    @Test
-    public void mark_missingEventIndex_failure() {
-        commandBox.runCommand("mark fff");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkDoneCommand.MESSAGE_USAGE));
-    }
-
-    @Test
-    public void unmark_invalidEventIndex_failure() {
-        commandBox.runCommand("unmark 10");
-        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-    }
-
-    @Test
-    public void unmark_missingEventIndex_failure() {
-        commandBox.runCommand("unmark fff");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkUndoneCommand.MESSAGE_USAGE));
-    }
-
-    @Test
-    public void invalidCommand_failure() {
-        commandBox.runCommand("markr 1");
-        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-    }
-
-}
-```
-###### \src\test\java\guitests\ResetCommandTest.java
-``` java
-    @Test
-    public void reset() {
-
-        // verify a non-empty list can be cleared
-        assertTrue(taskListPanel.isListMatching(td.getTypicalTasks()));
-        assertClearCommandSuccess();
-
-        // verify other commands can work after a clear command
-        commandBox.runCommand("add Act like a craven");
-        assertTrue(taskListPanel.isListMatching(td.cower));
-        commandBox.runCommand("delete 1");
-        assertListSize(0);
-
-        // verify clear command works when the list is empty
-        assertClearCommandSuccess();
-    }
-
-    private void assertClearCommandSuccess() {
-        commandBox.runCommand("reset");
-        assertListSize(0);
-        assertResultMessage("Task Manager has been reset!");
-    }
-}
-```
-###### \src\test\java\org\teamstbf\yats\model\event\IsDoneTest.java
-``` java
-public class IsDoneTest {
-
-    @Test
-    public void test() {
-        // valid IsDone
-        assertTrue(IsDone.isValidIsDone("Yes")); // done task
-        assertTrue(IsDone.isValidIsDone("No")); // undone task
-
-        // invalid IsDone
-        assertFalse(IsDone.isValidIsDone("yes"));
-        assertFalse(IsDone.isValidIsDone("no"));
-        assertFalse(IsDone.isValidIsDone("gg.com"));
-    }
-
-}
-```
-###### \src\test\java\org\teamstbf\yats\model\event\RecurrenceTest.java
-``` java
-public class RecurrenceTest {
-
-    @Test
-    public void isValidPeriod() {
-        // invalid recurrence
-        assertFalse(Recurrence.isValidPeriod("dail")); // typo error
-        assertFalse(Recurrence.isValidPeriod("weekl")); // typo error
-        assertFalse(Recurrence.isValidPeriod("")); // contains nothing
-        assertFalse(Recurrence.isValidPeriod("    ")); // spaces only
-        assertFalse(Recurrence.isValidPeriod("fnwuibig")); // completely invalid
-                                                           // input
-
-        // valid recurrence
-        assertTrue(Recurrence.isValidPeriod(" daily "));
-        assertTrue(Recurrence.isValidPeriod(" monthly "));
-        assertTrue(Recurrence.isValidPeriod(" weekly "));
-        assertTrue(Recurrence.isValidPeriod(" yearly "));
-        assertTrue(Recurrence.isValidPeriod(" none "));
-
-    }
-
-}
-```
-###### \src\test\java\org\teamstbf\yats\model\event\ScheduleTest.java
-``` java
-public class ScheduleTest {
-
-    @Test
-    public void test() {
-        // invalid schedule
-        assertFalse(Schedule.isValidSchedule("")); // empty string
-        assertFalse(Schedule.isValidSchedule("@#$")); // only non-alphanumeric
-                                                      // characters
-        assertFalse(Schedule.isValidSchedule("f3vbt5b5")); // invalid input
-        assertFalse(Schedule.isValidSchedule("05/05/2017 12:00PM")); // date
-                                                                     // before
-                                                                     // time
-        assertFalse(Schedule.isValidSchedule("13:00AM 05/05/2017")); // wrong
-                                                                     // time
-        assertFalse(Schedule.isValidSchedule("12:65AM 05/05/2017")); // wrong
-                                                                     // time
-        assertFalse(Schedule.isValidSchedule("13:00ZM 05/05/2017")); // wrong
-                                                                     // time
-        assertFalse(Schedule.isValidSchedule("12:00AM 43/05/2017")); // wrong
-                                                                     // date
-        assertFalse(Schedule.isValidSchedule("12:00AM 05/00/2017")); // wrong
-                                                                     // date
-        assertFalse(Schedule.isValidSchedule("12:00AM 05/13/2017")); // wrong
-                                                                     // date
-        assertFalse(Schedule.isValidSchedule("14:00AM 43/05/2017")); // wrong
-                                                                     // time and
-                                                                     // date
-        assertFalse(Schedule.isValidSchedule("12:00PM 29/02/2017")); // Not leap
-                                                                     // year
-
-        // valid schedule
-        assertTrue(Schedule.isValidSchedule("12:00PM 29/02/2016")); // Leap Year
-        assertTrue(Schedule.isValidSchedule("12:00PM 05/05/2017"));
-        assertTrue(Schedule.isValidSchedule("12:00PM 05/05/2017"));
-        assertTrue(Schedule.isValidSchedule("12:59AM 05/05/2017"));
-        assertTrue(Schedule.isValidSchedule("12:59AM 05/12/2017"));
-        assertTrue(Schedule.isValidSchedule("12:59AM 20/05/2017"));
-
-    }
-
-}
-```
-###### \src\test\java\org\teamstbf\yats\model\event\TitleTest.java
-``` java
-public class TitleTest {
-
-    @Test
-    public void isValidName() {
-        // invalid name
-        assertFalse(Title.isValidTitle("")); // empty string
-        assertFalse(Title.isValidTitle(" ")); // spaces only
-        assertFalse(Title.isValidTitle("!@#$")); // only non-alphanumeric
-                                                 // characters
-        assertFalse(Title.isValidTitle("DO _____??")); // contains
-                                                       // non-alphanumeric
-                                                       // characters
-
-        // valid name
-        assertTrue(Title.isValidTitle("do work now")); // alphabets only
-        assertTrue(Title.isValidTitle("DO PAGE 1 TO 14")); // alphanumeric
-                                                           // characters
-        assertTrue(Title.isValidTitle("12345")); // numbers only
-        assertTrue(Title.isValidTitle("Do Work NOW")); // with capital letters
-        assertTrue(Title.isValidTitle("Do this homework drink coffee eat bread and do whatever you want")); // long
-                                                                                                            // titles
-    }
 }
 ```
